<resources>
    <string name="app_name">DaisoWorks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ASUNG GROUP</string>
    <string name="nav_header_subtitle">(AD2201016)Jang Hoon Yoon</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>
    <string name="action_settings1">로그아웃</string>
    <string name="action_settings2">설정</string>

    <string name="menu_home">홈</string>
    <string name="menu_exhibition">전시회관리</string>
    <string name="menu_exhibition1">전시회관리</string>
    <string name="menu_sample">샘플이미지 등록</string>
    <string name="menu_sample1">샘플접수 관리</string>
    <string name="menu_sample2">스터디 결과등록</string>
    <string name="menu_analysis">디자인현황</string>
    <string name="menu_approve">디자인결재</string>
    <string name="menu_approve1">디자인조회</string>


    <string name="menu_itemmaster">상품조회</string>
    <string name="menu_commaster">거래처조회</string>
    <string name="menu_sujumaster">수주조회</string>
    <string name="menu_herp1">업체정보조회</string>
    <string name="menu_herp2">바코드관리</string>
    <string name="menu_herp3">업체별 상퓸관리</string>


    <string name="menu_client">거래처</string>
    <string name="menu_suju">수주</string>


    <string name="editId_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>

    <string name="txt_underline"></string>
    <string name="course_name">course_name</string>
    <string name="course_rating">course_rating</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">디자인현황</string>
    <string name="title_notifications">디자인결재</string>


    <string name="home_add_samscan">샘플스캔</string>
    <string name="home_add_exhibition">상담등록</string>
    <string name="herp_title1">기본정보</string>
    <string name="versioninfo">버전 업데이트 안내</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">test</string>


    <style name="switchTextAppearanceDark">

        <item name="thumbTint">@color/purple_700</item>
        <item name="track">@drawable/style_toggle_btn</item>
        <item name="android:thumb">@drawable/style_toggle_thumb</item>
        <item name="android:enabled">true</item>
        <item name="android:textColor">@color/black</item>

    </style>


    <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
        <item name="android:textSize">18sp</item>
        <item name="android:textStyle">bold</item>
    </style>


    <string name="default_notification_channel_id" translatable="false">DaisoWorks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>