<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
    </group>
   <item android:title="HERP"   >
       <menu>
           <group android:checkableBehavior="single">
               <item
                   android:id="@+id/nav_analysis1"
                   android:icon="@drawable/ic_menu_slideshow"
                   android:title="@string/menu_herp1" >
               </item>

               <item
                   android:id="@+id/nav_analysis2"
                   android:icon="@drawable/ic_menu_slideshow"
                   android:title="@string/menu_herp2" >
               </item>

               <item
                   android:id="@+id/nav_analysis3"
                   android:icon="@drawable/ic_menu_slideshow"
                   android:title="@string/menu_herp3" >
               </item>
           </group>
       </menu>
   </item>
    <item android:title="DMS">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_approve"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_approve" >
                </item>
                <item
                    android:id="@+id/nav_analysis"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_analysis"  />

                <item
                    android:id="@+id/nav_approve1"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_approve1" />
            </group>
        </menu>
    </item>

</menu>